@@ -1,5 +1,5 @@
 name    = Config-Model-OpenSsh
-version = 1.211
+version = 1.212
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
